--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yarrharr",
   "version": "0.0.0",
   "dependencies": {
-    "less": "1.4.2"
+    "less": "~1.6.1",
+    "request": "2.12.0"
   }
 }
