--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.rst
 include HACKING.rst
+include yarrharr/tests/test_config.ini
 recursive-include yarrharr/static *
 recursive-include yarrharr/templates *.html
