Fix tox lint deps

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = lint, py27
+minversion = 1.4
 
 [testenv]
 deps =
@@ -7,10 +8,13 @@ deps =
     pytz
     South >= 0.8.1
     https://github.com/radiac/django-yarr/archive/v0.3.13.zip#egg=django-yarr-0.3.13
-commands = trial yarrharr
+commands =
+    trial yarrharr
 
 [testenv:lint]
-deps = flake8
+deps =
+    {[testenv]deps}
+    flake8
 commands =
     flake8 yarrharr
 
