--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,20 @@ deps =
 commands =
     flake8 yarrharr
 
+[testenv:runserver]
+setenv =
+    YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
+    DJANGO_SETTINGS_MODULE=yarrharr.settings
+commands =
+    django-admin.py collectstatic -l --noinput
+    django-admin.py syncdb
+    django-admin.py migrate
+    django-admin.py runserver
+
+[testenv:run]
+setenv = {[testenv:runserver]setenv}
+commands = {posargs:true}
+
 [flake8]
 ignore = E128
 max-line-length = 120
