--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     flake8 yarrharr
 
 [testenv:runserver]
+usedevlop = true
 setenv =
     YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
     DJANGO_SETTINGS_MODULE=yarrharr.settings
