Stub app with React hot reloading
Unfortunately now you have to run the Django devserver and Webpack
devserver in parallel.  But still worth it.

I see recursion errors in the JS console when modules get reloaded; I'm
not sure what's going on there but this seems to work despite them.
Will have to investigate later.

--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "react": "~0.13.1",
     "style-loader": "^0.8.3",
     "webpack": "^1.7.2"
+  },
+  "devDependencies": {
+    "react-hot-loader": "~1.2.5",
+    "webpack-dev-server": "~1.8.0"
   }
 }
