--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
     django-admin.py collectstatic -l --noinput
     django-admin.py syncdb
     django-admin.py migrate
-    django-admin.py runserver
+    django-admin.py runserver {posargs}
 
 [testenv:run]
 setenv = {[testenv:runserver]setenv}
