--- a/yarrharr/tests/test_config.ini
+++ b/yarrharr/tests/test_config.ini
@@ -1,10 +1,13 @@
 [yarrharr]
 debug = yes
 server_endpoint = tcp:8888:interface=127.0.0.1
-external_url = http://localhost:8888
+external_url = http://127.0.0.1:8888
 ; Doesn't really matter for testing; files are served from app directories by
 ; Django's development server.
 static_root = static/
+; In development, the JavaScript resources are served by the Webpack dev
+; server so that hot module reloading works.
+static_url = http://127.0.0.1:8889/
 
 [db]
 name = testdb.sqlite
