tox.ini: *Actually* use dev install for runserver

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
     flake8 yarrharr
 
 [testenv:runserver]
-usedevlop = true
+usedevelop = true
 setenv =
     YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
     DJANGO_SETTINGS_MODULE=yarrharr.settings
