--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "jsx-loader": "^0.12.2",
     "react": "~0.13.1",
     "style-loader": "^0.8.3",
-    "webpack": "^1.7.2"
+    "webpack": "^1.7.2",
+    "less": "~1.6.1"
   },
   "devDependencies": {
     "react-hot-loader": "~1.2.5",
