--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "~0.13.1",
     "style-loader": "^0.8.3",
     "webpack": "^1.7.2",
-    "less": "~1.6.1"
+    "less": "~2.5.1",
+    "less-loader": "~2.2.0"
   },
   "devDependencies": {
     "react-hot-loader": "~1.2.5",
