--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "yarrharr",
   "version": "0.0.0",
   "dependencies": {
-    "css-loader": "^0.9.1",
-    "jsx-loader": "^0.12.2",
-    "react": "~0.13.1",
-    "style-loader": "^0.8.3",
-    "webpack": "^1.7.2",
-    "less": "~2.5.1",
-    "less-loader": "~2.2.0"
+    "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.3",
+    "react-addons-pure-render-mixin": "^0.14.3",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
-    "react-hot-loader": "~1.2.5",
-    "webpack-dev-server": "~1.8.0"
+    "babel-core": "^6.0.20",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "css-loader": "^0.9.1",
+    "style-loader": "^0.8.3",
+    "less": "~2.5.1",
+    "less-loader": "~2.2.0",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.12.1"
   }
 }
