Remove hot module reloading stuff, update docs
It has never really worked right, and I just can't tolerate the
recursion errors anymore.

--- a/yarrharr/tests/test_config.ini
+++ b/yarrharr/tests/test_config.ini
@@ -5,9 +5,7 @@ external_url = http://127.0.0.1:8888
 ; Doesn't really matter for testing; files are served from app directories by
 ; Django's development server.
 static_root = static/
-; In development, the JavaScript resources are served by the Webpack dev
-; server so that hot module reloading works.
-static_url = http://127.0.0.1:8889/
+static_url = /static/
 
 [db]
 name = testdb.sqlite
