--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "style-loader": "^0.8.3",
     "less": "~2.5.1",
     "less-loader": "~2.2.0",
-    "react-hot-loader": "^1.3.0",
     "redux-devtools": "^2.1.5",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.9"
   }
 }
