--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "dependencies": {
     "history": "^1.17.0",
     "react": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-addons-pure-render-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.3",
     "redux": "^3.0.4",
-    "redux-simple-router": "0.0.8"
+    "redux-logger": "^2.3.1",
+    "redux-simple-router": "0.0.8",
+    "redux-thunk": "~1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
