--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "react-addons-pure-render-mixin": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.3",
+    "react-router": "~2.4.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.3.1",
-    "redux-simple-router": "0.0.8",
-    "redux-thunk": "~1.0.2"
+    "redux-thunk": "~1.0.2",
+    "react-router-redux": "~4.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
