--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "~2.4.0",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.3.1",
-    "redux-thunk": "~1.0.2",
+    "redux": "~3.5.2",
+    "redux-logger": "~2.6.1",
+    "redux-thunk": "~2.0.1",
     "react-router-redux": "~4.0.4"
   },
   "devDependencies": {
