--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "dependencies": {
     "history": "^1.17.0",
-    "react": "^0.14.3",
-    "react-addons-css-transition-group": "^0.14.3",
-    "react-addons-pure-render-mixin": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
+    "react": "~15.0.2",
+    "react-addons-css-transition-group": "~15.0.2",
+    "react-addons-pure-render-mixin": "~15.0.2",
+    "react-dom": "~15.0.2",
+    "react-redux": "~4.4.5",
     "react-router": "~2.4.0",
     "redux": "~3.5.2",
     "redux-logger": "~2.6.1",
