--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "react-router-redux": "~4.0.4"
   },
   "devDependencies": {
-    "babel-core": "^6.0.20",
+    "babel-core": "^6.8.0",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
-    "css-loader": "^0.9.1",
-    "style-loader": "^0.8.3",
-    "less": "~2.5.1",
+    "css-loader": "^0.23.1",
+    "file-loader": "~0.8.5",
+    "less": "^2.7.0",
     "less-loader": "~2.2.0",
-    "webpack": "^1.12.9",
-    "file-loader": "~0.8.5"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.9"
   }
 }
