--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yarrharr",
-  "version": "0.0.0",
+  "private": true,
   "dependencies": {
     "react": "~15.0.2",
     "react-addons-css-transition-group": "~15.0.2",
