--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "css-loader": "^0.23.1",
+    "eslint": "^2.11.1",
+    "eslint-loader": "^1.3.0",
     "file-loader": "~0.8.5",
     "less": "^2.7.0",
     "less-loader": "~2.2.0",
