--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,10 @@
         }
     },
     "env": {
+        "node": true,
         "browser": true
+    },
+    "rules": {
+        "no-undef": "error"
     }
 }
