tox -e run should usedevelop

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
     django-admin.py runserver {posargs}
 
 [testenv:run]
+usedevelop = true
 setenv = {[testenv:runserver]setenv}
 commands = {posargs:true}
 
