Pin flake8 version to 3.0.4
flake8 has a history of changing defaults if left unpinned, so keep it
pinned to avoid spurious build failures.

--- a/tox.ini
+++ b/tox.ini
@@ -9,13 +9,11 @@ deps =
     South >= 0.8.1
     https://github.com/twm/django-yarr/tarball/v0.4.6-twm.1#egg=django-yarr
     mock
+    lint: flake8 == 3.0.4
 commands =
     trial yarrharr
 
 [testenv:lint]
-deps =
-    {[testenv]deps}
-    flake8
 commands =
     flake8 yarrharr
 
