WIP Remove django-yarr, upgrade to Django 1.10

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ minversion = 1.4
 [testenv]
 deps =
     Twisted == 16.5.0
+    Django == 1.10.3
+    feedparser == 5.2.1
     pytz
-    South >= 0.8.1
-    https://github.com/twm/django-yarr/tarball/v0.4.6-twm.1#egg=django-yarr
     mock
     lint: flake8 == 3.0.4
 commands =
@@ -24,7 +24,6 @@ setenv =
     DJANGO_SETTINGS_MODULE=yarrharr.settings
 commands =
     django-admin.py collectstatic -l --noinput
-    django-admin.py syncdb
     django-admin.py migrate
     django-admin.py runserver {posargs}
 
