Don't lint Django migrations
These autogenerated files contain long lines.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,6 @@ commands = {posargs:true}
 
 [flake8]
 ignore = E128
-exclude = yarrharr/wsgi.py
+exclude = yarrharr/wsgi.py,yarrharr/migrations/*.py
 max-line-length = 120
 max-complexity = 10
