WIP fetching, logging
The fetch code runs. Simplify logging to only go to stdout.

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ minversion = 1.4
 [testenv]
 deps =
     Twisted == 16.5.0
+    treq == 16.12.0
     Django == 1.10.3
     feedparser == 5.2.1
     pytz
