Defaults and __unicode__ in models

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = lint, py27
 minversion = 1.4
 
 [testenv]
+usedevelop = true
 deps =
     Twisted == 16.5.0
     treq == 16.12.0
@@ -11,26 +12,24 @@ deps =
     pytz
     mock
     lint: flake8 == 3.0.4
+setenv =
+    YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
+    DJANGO_SETTINGS_MODULE=yarrharr.settings
 commands =
-    trial yarrharr
+    django-admin test -v2
 
 [testenv:lint]
 commands =
     flake8 yarrharr
 
 [testenv:runserver]
-usedevelop = true
-setenv =
-    YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
-    DJANGO_SETTINGS_MODULE=yarrharr.settings
 commands =
-    django-admin.py collectstatic -l --noinput
-    django-admin.py migrate
-    django-admin.py runserver {posargs}
+    django-admin collectstatic -l --noinput
+    django-admin migrate
+    django-admin runserver {posargs}
 
 [testenv:run]
 usedevelop = true
-setenv = {[testenv:runserver]setenv}
 commands = {posargs:true}
 
 [flake8]
