--- a/tox.ini
+++ b/tox.ini
@@ -5,18 +5,14 @@ minversion = 1.4
 [testenv]
 usedevelop = true
 deps =
-    Twisted == 16.5.0
-    treq == 16.12.0
-    Django == 1.10.3
-    feedparser == 5.2.1
-    pytz
     mock
     lint: flake8 == 3.0.4
 setenv =
     YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
     DJANGO_SETTINGS_MODULE=yarrharr.settings
 commands =
-    django-admin test -v2
+    django-admin test -v2 yarrharr.tests
+    trial yarrharr.txtests
 
 [testenv:lint]
 commands =
