--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
 include yarrharr/tests/test_config.ini
+recursive-include yarrharr/examples *.rss *.atom
 recursive-include yarrharr/static *
 recursive-include yarrharr/templates *.html
