"make poll-feeds" and "make force-poll"

--- a/tox.ini
+++ b/tox.ini
@@ -18,15 +18,9 @@ commands =
 commands =
     flake8 yarrharr
 
-[testenv:runserver]
-commands =
-    django-admin collectstatic -l --noinput
-    django-admin migrate
-    django-admin runserver {posargs}
-
 [testenv:run]
 usedevelop = true
-commands = {posargs:true}
+commands = {posargs:django-admin --help}
 
 [flake8]
 ignore = E128
