--- a/package.json
+++ b/package.json
@@ -15,16 +15,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
-    "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
-    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
-    "eslint-loader": "^1.3.0",
-    "file-loader": "~0.8.5",
-    "less": "^2.7.0",
-    "less-loader": "~2.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.9"
+    "less": "^2.7.0"
   }
 }
