--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "eslint": "^2.11.1",
-    "less": "^2.7.0"
+    "less": "^2.7.0",
+    "webpack": "^3.5.5"
   }
 }
