--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "react-router-redux": "~4.0.4"
   },
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "css-loader": "^0.28.5",
     "eslint": "^2.11.1",
-    "less": "^2.7.0",
+    "eslint-loader": "^1.9.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
 }
