--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "yarrharr",
   "private": true,
   "dependencies": {
+    "normalize.css": "^7.0.0",
     "react": "~15.0.2",
     "react-addons-css-transition-group": "~15.0.2",
     "react-addons-pure-render-mixin": "~15.0.2",
     "react-dom": "~15.0.2",
     "react-redux": "~4.4.5",
     "react-router": "~2.4.0",
+    "react-router-redux": "~4.0.4",
     "redux": "~3.5.2",
     "redux-logger": "~2.6.1",
-    "redux-thunk": "~2.0.1",
-    "react-router-redux": "~4.0.4"
+    "redux-thunk": "~2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
