--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
+sudo: false
 language: python
 python:
   - "2.7"
+before_install:
+  - nvm install
+  - nvm use
 install: "pip install tox"
-script: "tox"
+script:
+  - tox
+  - npm install
+  - make webpack-prod
