--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "yarrharr",
   "private": true,
   "dependencies": {
+    "history": "^4.7.2",
     "normalize.css": "^7.0.0",
     "react": "~15.0.2",
     "react-addons-css-transition-group": "~15.0.2",
     "react-addons-pure-render-mixin": "~15.0.2",
     "react-dom": "~15.0.2",
     "react-redux": "~4.4.5",
-    "react-router": "~2.4.0",
-    "react-router-redux": "~4.0.4",
     "redux": "~3.5.2",
     "redux-logger": "~2.6.1",
     "redux-thunk": "~2.0.1"
