--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "normalize.css": "^7.0.0",
+    "prop-types": "^15.5.7",
     "react": "~15.0.2",
     "react-addons-css-transition-group": "~15.0.2",
     "react-addons-pure-render-mixin": "~15.0.2",
