--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "dependencies": {
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.7",
-    "react": "~15.0.2",
-    "react-addons-css-transition-group": "~15.0.2",
-    "react-addons-pure-render-mixin": "~15.0.2",
-    "react-dom": "~15.0.2",
-    "react-redux": "~4.4.5",
-    "redux": "~3.5.2",
-    "redux-logger": "~2.6.1",
+    "react": "^15.6.1",
+    "react-addons-pure-render-mixin": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-redux": "~4.4.8",
+    "redux": "~3.7.2",
+    "redux-logger": "~3.0.6",
     "redux-thunk": "~2.0.1"
   },
   "devDependencies": {
