--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 setenv =
     YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
     DJANGO_SETTINGS_MODULE=yarrharr.settings
-    PYTHONWARNINGS=all
+    PYTHONWARNINGS=all,ignore::ImportWarning
 commands =
     django-admin test -v2 yarrharr.tests
 
