--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
+    "svgr": "^0.4.0",
     "webpack": "^3.5.5"
   }
 }
