--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
     "svgr": "^0.4.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.5.5"
   }
 }
