Start running tests under Python 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = lint, py27
-minversion = 1.4
+envlist = {test,lint}-{py27,py35}
+minversion = 2.5.0
 
 [testenv]
 usedevelop = true
-basepython = python2.7
 deps =
     mock
     lint: flake8 == 3.0.4
@@ -13,11 +12,8 @@ setenv =
     DJANGO_SETTINGS_MODULE=yarrharr.settings
     PYTHONWARNINGS=all,ignore::ImportWarning
 commands =
-    django-admin test -v2 yarrharr.tests
-
-[testenv:lint]
-commands =
-    flake8 yarrharr
+    test: django-admin test -v2 yarrharr.tests
+    lint: flake8 yarrharr
 
 [testenv:run]
 usedevelop = true
