--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 sudo: false
-language: python
-python:
-  - "2.7"
-before_install:
-  - nvm install
-  - nvm use
-install: "pip install tox"
-script:
-  - tox
-  - npm install
-  - make webpack-prod
+matrix:
+  include:
+    - language: python
+      python: "2.7"
+      install: "pip install tox"
+      script:
+        - tox -e py27-lint
+        - tox -e py27-test
+    - language: python
+      python: "3.5"
+      install: "pip install tox"
+      script:
+        - tox -e py35-lint
+        - tox -e py35-test
+    - language: node_js
+      script:
+        - npm install
+        - make webpack-prod
