Travis: Test in Python 3.6 too

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ matrix:
       script:
         - tox -e py35-lint
         - tox -e py35-test
+    - language: python
+      python: "3.6"
+      install: "pip install tox"
+      script:
+        - tox -e py36-lint
+        - tox -e py36-test
     - language: node_js
       script:
         - npm install
