--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {test,lint}-{py27,py35}
+envlist = {test,lint}-py35
 minversion = 2.5.0
 
 [testenv]
@@ -16,6 +16,7 @@ commands =
     lint: flake8 yarrharr
 
 [testenv:run]
+basepython = python3
 usedevelop = true
 commands = {posargs:django-admin --help}
 
