--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
 setenv =
     YARRHARR_CONF={toxinidir}/yarrharr/tests/test_config.ini
     DJANGO_SETTINGS_MODULE=yarrharr.settings
-    PYTHONWARNINGS=all,ignore::ImportWarning
+    PYTHONWARNINGS=all,ignore::ImportWarning,ignore::DeprecationWarning:site
 commands =
     test: django-admin test -v2 yarrharr.tests
     lint: flake8 yarrharr
