Check for missing migrations

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ setenv =
     PYTHONWARNINGS=all,ignore::ImportWarning,ignore::DeprecationWarning:site
 commands =
     test: django-admin test -v2 yarrharr.tests
+    test: django-admin makemigrations --dry-run --check
     lint: flake8 yarrharr
 
 [testenv:run]
