Serve static files from yarrharr/static

--- a/yarrharr/tests/test_config.ini
+++ b/yarrharr/tests/test_config.ini
@@ -2,9 +2,16 @@
 debug = yes
 server_endpoint = tcp:8888:interface=127.0.0.1
 external_url = http://127.0.0.1:8888
-; Doesn't really matter for testing; files are served from app directories by
-; Django's development server.
-static_root = static/
+; Static files are served in two ways in development:
+;
+; 1. For "make runserver", they are served by Django's development server and
+;    this setting is ignored.
+;
+; 2. For "tox -e run -- yarrharr", this setting is obeyed. It points directly
+;    at the Yarrharr app static file directory (where "make webpack" deposits
+;    files). This means that it will only serve static files from Yarrharr,
+;    which is okay for now as no other apps in use provide static files.
+static_root = yarrharr/static/
 static_url = /static/
 
 [db]
