--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prop-types": "^15.5.7",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-redux": "~4.4.8",
+    "react-redux": "^5.0.7",
     "redux": "~3.7.2",
     "redux-logger": "~3.0.6",
     "redux-thunk": "~2.0.1"
