fixup! Enable object spread in Babel config

--- a/.babelrc
+++ b/.babelrc
@@ -7,16 +7,9 @@
           "Chrome >= 60",
           "Edge >= 15"
         ]
-      },
-      "modules": false,
-      "useBuiltins": true,
-      "include": [
-        "transform-es2015-spread"
-      ],
-      "exclude": [
-        "transform-regenerator"
-      ]
+      }
     }],
     "react"
-  ]
+  ],
+  "plugins": ["transform-object-rest-spread"]
 }
