Run Travis against Python 3.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ matrix:
       script:
         - tox -e py36-lint
         - tox -e py36-test
+    - language: python
+      python: "3.7"
+      install: "pip install tox"
+      script:
+        - tox -e py37-lint
+        - tox -e py37-test
     - language: node_js
       script:
         - npm install
