Compress assets with a Python script
This works nicely on Travis because both of these packages have
manylinux1 wheels on PyPI.

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,15 @@ basepython = python3
 usedevelop = true
 commands = {posargs:django-admin --help}
 
+[testenv:compress]
+description = Compress static assets for production deployment
+basepython = python3.6
+skip_install = true
+deps =
+    brotli
+    zopfli
+commands = {envpython} {toxinidir}/bin/compress-prod.py
+
 [flake8]
 ignore = E128
 exclude = yarrharr/wsgi.py,yarrharr/migrations/*.py
