--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
-    "redux": "~3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "~3.0.6",
-    "redux-thunk": "~2.0.1"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
