sudo the things

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,26 +4,26 @@ matrix:
   include:
     - language: python
       python: "3.5"
-      install: "pip install tox"
+      install: "sudo pip install tox"
       script:
         - tox -e py35-lint
         - tox -e py35-test
     - language: python
       python: "3.6"
-      install: "pip install tox"
+      install: "sudo pip install tox"
       script:
         - tox -e py36-lint
         - tox -e py36-test
     - language: python
       python: "3.7"
-      install: "pip install tox"
+      install: "sudo pip install tox"
       script:
         - tox -e py37-lint
         - tox -e py37-test
     - language: node_js
       python: "3.6"
       install:
-        - "pip install tox"
+        - "sudo pip install tox"
         - "nvm install"
       script:
         - npm install
