sudo: true and dist: xenial are required
https://github.com/travis-ci/travis-ci/issues/9069#issuecomment-425720905

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ matrix:
         - tox -e py36-test
     - language: python
       python: "3.7"
-      install: "pip install tox"
+      dist: xenial
+      sudo: true
+      install: "sudo pip install tox"
       script:
         - tox -e py37-lint
         - tox -e py37-test
