--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
       script:
         - tox -e py37-lint
         - tox -e py37-test
-    - language: node_js
+    - language: python
       python: "3.6"
       install:
         - "pip install tox"
