--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build-dev": "webpack -d --mode development --watch",
     "build-prod": "webpack -p --mode production",
-    "devserver": "webpack-dev-server --hot --mode development"
+    "devserver": "webpack-dev-server --hot --watch --mode development"
   },
   "dependencies": {
     "normalize.css": "^7.0.0",
