--- a/tox.ini
+++ b/tox.ini
@@ -38,3 +38,8 @@ exclude =
     yarrharr/wsgi.py
     yarrharr/migrations/*.py
 max-line-length = 120
+
+[isort]
+default_section = THIRDPARTY
+multi_line_output = 3
+include_trailing_comma = true
