Disable writing bytecode in dev
This can mask import issues when moving code around.

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ setenv =
     YARRHARR_CONF={env:YARRHARR_CONF:{toxinidir}/yarrharr/tests/dev.ini}
     DJANGO_SETTINGS_MODULE=yarrharr.settings
     PYTHONWARNINGS=all,ignore::ImportWarning,ignore::DeprecationWarning:site
+    PYTHONDONTWRITEBYTECODE=yes
 ; This must remain disabled due to https://github.com/twisted/treq/issues/226
 ;   POISON_REACTOR=yes
 commands =
