isort: Skip wsgi.py and migrations

--- a/tox.ini
+++ b/tox.ini
@@ -44,3 +44,5 @@ max-line-length = 120
 default_section = THIRDPARTY
 multi_line_output = 3
 include_trailing_comma = true
+skip = wsgi.py
+skip_glob = migrations/*.py
