tox.ini: changedir before running tests

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,10 @@ setenv =
     PYTHONDONTWRITEBYTECODE=yes
 ; This must remain disabled due to https://github.com/twisted/treq/issues/226
 ;   POISON_REACTOR=yes
+changedir =
+; SynchronousTestCase.mktemp() creates a directory named for the test in the
+; working directory, so put that somewhere temporary:
+    test: {envtmpdir}
 commands =
     test: django-admin test -v2 yarrharr.tests
     test: django-admin makemigrations --dry-run --check
