Move warnings config to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,6 @@ deps =
 setenv =
     YARRHARR_CONF={env:YARRHARR_CONF:{toxinidir}/yarrharr/tests/dev.ini}
     DJANGO_SETTINGS_MODULE=yarrharr.settings
-    PYTHONWARNINGS=all,ignore::ImportWarning,ignore::DeprecationWarning:site
     PYTHONDONTWRITEBYTECODE=yes
 ; This must remain disabled due to https://github.com/twisted/treq/issues/226
 ;   POISON_REACTOR=yes
@@ -59,3 +58,9 @@ use_parentheses = true
 line_length = 88
 skip = wsgi.py
 skip_glob = migrations/*.py
+
+[pytest]
+filterwarnings=
+    all
+    ignore::ImportWarning
+    ignore::DeprecationWarning:site
