--- a/tox.ini
+++ b/tox.ini
@@ -63,4 +63,5 @@ skip_glob = migrations/*.py
 filterwarnings=
     all
     ignore::ImportWarning
-    ignore::DeprecationWarning:site
+    # https://github.com/twisted/treq/pull/253
+    ignore:twisted.test.proto_helpers.MemoryReactorClock was deprecated in Twisted 19.7.0:DeprecationWarning:treq.testing
