Silence Twisted self-inflicted warning

--- a/tox.ini
+++ b/tox.ini
@@ -63,5 +63,7 @@ skip_glob = migrations/*.py
 filterwarnings=
     all
     ignore::ImportWarning
-    # https://github.com/twisted/treq/pull/253
+    # Fixed in https://github.com/twisted/treq/pull/253
     ignore:twisted.test.proto_helpers.MemoryReactorClock was deprecated in Twisted 19.7.0:DeprecationWarning:treq.testing
+    # This is a Twisted bug, see https://twistedmatrix.com/trac/ticket/8227 and https://twistedmatrix.com/trac/ticket/8929
+    ignore:Using readBody with a transport that does not have an abortConnection method:DeprecationWarning
