--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = {test,lint}-py37
+envlist = test, lint
 minversion = 2.5.0
 
 [testenv]
+basepython = python3.8
 usedevelop = true
 deps =
     test: pytest == 4.6.2
@@ -28,13 +29,11 @@ commands =
     lint: flake8 yarrharr
 
 [testenv:run]
-basepython = python3.7
 usedevelop = true
 commands = {posargs:django-admin --help}
 
 [testenv:compress]
 description = Compress static assets for production deployment
-basepython = python3.7
 skip_install = true
 deps =
     brotli
