--- a/.travis.yml
+++ b/.travis.yml
@@ -6,26 +6,14 @@ branches:
     - master   # PRs
 jobs:
   include:
-    - name: "Test: Python 3.5"
-      python: "3.5"
-      install: "pip install tox"
-      script:
-        - tox -e py35-lint
-        - tox -e py35-test
-    - name: "Test: Python 3.6"
-      python: "3.6"
-      install: "pip install tox"
-      script:
-        - tox -e py36-lint
-        - tox -e py36-test
-    - name: "Test: Python 3.7"
-      python: "3.7"
+    - name: "Test"
+      python: "3.8"
       install: "sudo pip install tox"
       script:
-        - tox -e py37-lint
-        - tox -e py37-test
+        - tox -e lint
+        - tox -e test
     - name: "Webpack Build"
-      python: "3.7"
+      python: "3.8"
       install:
         - "sudo pip install tox"
         - "nvm install"
