Defactor tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,29 +4,26 @@ minversion = 2.5.0
 
 [testenv]
 basepython = python3.8
-usedevelop = true
-deps =
-    test: pytest == 4.6.2
-    test: pytest-twisted == 1.10
-    test: pytest-django == 3.5.0
-
-    lint: flake8 == 3.7.7
-    lint: flake8-isort == 3.0.1
-    lint: flake8-commas == 2.0.0
 setenv =
     YARRHARR_CONF={env:YARRHARR_CONF:{toxinidir}/yarrharr/tests/dev.ini}
     DJANGO_SETTINGS_MODULE=yarrharr.settings
     PYTHONDONTWRITEBYTECODE=yes
 ; This must remain disabled due to https://github.com/twisted/treq/issues/226
 ;   POISON_REACTOR=yes
+
+[testenv:test]
+usedevelop = true
+deps =
+    pytest == 4.6.2
+    pytest-twisted == 1.10
+    pytest-django == 3.5.0
 changedir =
 ; SynchronousTestCase.mktemp() creates a directory named for the test in the
 ; working directory, so put that somewhere temporary:
-    test: {envtmpdir}
+    {envtmpdir}
 commands =
-    test: pytest {toxinidir}/yarrharr
-    test: django-admin makemigrations --dry-run --check
-    lint: flake8 yarrharr
+    pytest {toxinidir}/yarrharr
+    django-admin makemigrations --dry-run --check
 
 [testenv:run]
 usedevelop = true
@@ -39,6 +36,16 @@ deps =
     brotli
     zopfli
 commands = {envpython} {toxinidir}/bin/compress-prod.py
+
+[testenv:lint]
+description = Lint the codebase
+skip_install = true
+deps =
+    flake8 == 3.7.7
+    flake8-isort == 3.0.1
+    flake8-commas == 2.0.0
+commands =
+    flake8 yarrharr
 
 [flake8]
 exclude =
