apt update before install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,10 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - run: "sudo apt-get install inkscape icoutils scour optipng"
+    - run: |
+        set -exu
+        sudo apt-get update
+        sudo apt-get install inkscape icoutils scour optipng
 
     - uses: actions/setup-python@v2
       with:
