--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install inkscape icoutils scour optipng
 
+    - uses: actions/checkout@v2
+
     - uses: actions/setup-python@v2
       with:
         python-version: "3.8"
@@ -52,4 +54,4 @@ jobs:
         npm install
         make webpack-release
       # A login shell (-l) is required so that nvm.sh get sourced as part of shell startup.
-      shell: "bash -l -e -o pipefail {0}"
+      shell: "bash -l -eo pipefail {0}"
