--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         python-version: "3.8"
 
-    - name: pip cache
+    - name: Restore pip cache
       uses: actions/cache@v2
       with:
         path: ~/.cache/pip
@@ -55,7 +55,7 @@ jobs:
       with:
         python-version: "3.8"
 
-    - name: pip cache
+    - name: Restore pip cache
       uses: actions/cache@v2
       with:
         path: ~/.cache/pip
@@ -66,10 +66,22 @@ jobs:
 
     - run: "python -m pip install tox"
 
+    - name: Introspect nvm
+      id: nvm_info
+      run: echo ::set-output name=cache-dir::$(nvm cache dir)
+      shell: "bash -l {0}"
+
+    - name: Restore nvm cache
+      uses: actions/cache@v2
+      with:
+        path: "${{ steps.nvm_info.outputs.cache-dir }}"
+        key: "${{ runner.os }}-nvm-${{ hashFiles('.nvmrc') }}"
+        restore-keys: |
+          ${{ runner.os }}-nvm-
+
     - name: "make webpack-release"
       run: |
-        nvm install --no-progress
+        nvm install
         npm install
         make webpack-release
-      # A login shell (-l) is required so that nvm.sh get sourced as part of shell startup.
-      shell: "bash -l -eo pipefail {0}"
+      shell: "bash -l {0}"
