--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
     - name: apt install
       run: |
         sudo apt-get update
-        sudo apt-get install inkscape icoutils scour optipng
+        sudo apt-get install --no-install-suggests --no-install-recommends inkscape icoutils scour optipng
 
     - uses: actions/setup-python@v2
       with:
