--- a/tox.ini
+++ b/tox.ini
@@ -40,28 +40,22 @@ commands = {envpython} {toxinidir}/bin/compress-prod.py
 [testenv:lint]
 description = Lint the codebase
 skip_install = true
-deps =
-    flake8 == 3.7.7
-    flake8-isort == 4.0.0
-    flake8-commas == 2.0.0
+deps = -rrequirements_lint.txt
 commands =
     flake8 yarrharr
+
+[testenv:deps]
+description = Pin dependencies
+skip_install = true
+deps = pip-tools
+commands =
+    pip-compile --output-file requirements_lint.txt requirements_lint.in
 
 [flake8]
 exclude =
     yarrharr/wsgi.py
     yarrharr/migrations/*.py
 max-line-length = 120
-
-[isort]
-default_section = THIRDPARTY
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-skip = wsgi.py
-skip_glob = migrations/*.py
 
 [pytest]
 filterwarnings=
