--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,9 @@
 [build-system]
 requires = ["setuptools >= 46.4.0", "wheel"]
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+skip = "yarrharr/wsgi.py"
+skip_glob = "yarrharr/migrations/*.py"
