Pin compress dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -32,9 +32,7 @@ commands = {posargs:django-admin --help}
 [testenv:compress]
 description = Compress static assets for production deployment
 skip_install = true
-deps =
-    brotli
-    zopfli
+deps = -rrequirements_compress.txt
 commands = {envpython} {toxinidir}/bin/compress-prod.py
 
 [testenv:lint]
@@ -50,6 +48,7 @@ skip_install = true
 deps = pip-tools
 commands =
     pip-compile --output-file requirements_lint.txt requirements_lint.in
+    pip-compile --output-file requirements_compress.txt requirements_compress.in
 
 [flake8]
 exclude =
