Pin test dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -14,9 +14,8 @@ setenv =
 [testenv:test]
 usedevelop = true
 deps =
-    pytest == 4.6.2
-    pytest-twisted == 1.10
-    pytest-django == 3.5.0
+    -rrequirements.txt
+    -rrequirements_test.txt
 changedir =
 ; SynchronousTestCase.mktemp() creates a directory named for the test in the
 ; working directory, so put that somewhere temporary:
@@ -49,6 +48,8 @@ deps = pip-tools
 commands =
     pip-compile --output-file requirements_lint.txt requirements_lint.in
     pip-compile --output-file requirements_compress.txt requirements_compress.in
+    pip-compile --output-file requirements.txt setup.py
+    pip-compile --output-file requirements_test.txt requirements_test.in
 
 [flake8]
 exclude =
