Pin "make devserver" deps

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ minversion = 2.5.0
 
 [testenv]
 basepython = python3.8
+deps =
+    -rrequirements.txt
 setenv =
     YARRHARR_CONF={env:YARRHARR_CONF:{toxinidir}/yarrharr/tests/dev.ini}
     DJANGO_SETTINGS_MODULE=yarrharr.settings
@@ -14,7 +16,7 @@ setenv =
 [testenv:test]
 usedevelop = true
 deps =
-    -rrequirements.txt
+    {[testenv]deps}
     -rrequirements_test.txt
 changedir =
 ; SynchronousTestCase.mktemp() creates a directory named for the test in the
