Suppress warnings re: #659

--- a/tox.ini
+++ b/tox.ini
@@ -65,3 +65,5 @@ filterwarnings=
     ignore::ImportWarning
     # This is a Twisted bug, see https://twistedmatrix.com/trac/ticket/8227 and https://twistedmatrix.com/trac/ticket/8929
     ignore:Using readBody with a transport that does not have an abortConnection method:DeprecationWarning
+    # Tracked in https://github.com/twm/yarrharr/issues/659
+    ignore:html5lib's sanitizer:DeprecationWarning
