--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,9 @@ jobs:
       # expected to exist by the manifest.json view test.
     - run: |
         mkdir yarrharr/static
-        touch yarrharr/static/icon-xyz.{ico,png,svg}
+        touch yarrharr/static/{icon,logotype,lettertype}-xyz.{ico,png,svg}
+        touch yarrharr/static/{vendor,main}-xyz.css
+        touch yarrharr/static/{runtime,vendor,main}-xyz.js
 
     - run: "python -m tox"
 
