--- a/package.json
+++ b/package.json
@@ -6,15 +6,7 @@
     "webpack-dev-server": "webpack serve"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-logger": "~3.0.6",
-    "redux-thunk": "^2.3.0"
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
