--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "yarrharr",
   "private": true,
   "scripts": {
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack serve"
+    "webpack": "webpack"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
@@ -20,7 +19,6 @@
     "mini-css-extract-plugin": "^1.3.9",
     "style-loader": "^2.0.0",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.6.0"
   }
 }
