--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -4,6 +4,10 @@
 #
 #    pip-compile --output-file=requirements_lint.txt requirements_lint.in
 #
+black==21.12b0
+    # via -r requirements_lint.in
+click==8.0.3
+    # via black
 flake8==4.0.1
     # via
     #   -r requirements_lint.in
@@ -16,9 +20,19 @@ isort==5.10.1
     #   flake8-isort
 mccabe==0.6.1
     # via flake8
+mypy-extensions==0.4.3
+    # via black
+pathspec==0.9.0
+    # via black
+platformdirs==2.4.1
+    # via black
 pycodestyle==2.8.0
     # via flake8
 pyflakes==2.4.0
     # via flake8
 testfixtures==6.17.1
     # via flake8-isort
+tomli==1.2.3
+    # via black
+typing-extensions==4.0.1
+    # via black
