Check for formatting

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ skip_install = true
 deps = -rrequirements_lint.txt
 commands =
     flake8 yarrharr
+    black --check setup.py yarrharr
 
 [testenv:deps]
 description = Pin dependencies
