--- a/tox.ini
+++ b/tox.ini
@@ -58,7 +58,8 @@ commands =
 exclude =
     yarrharr/wsgi.py
     yarrharr/migrations/*.py
-max-line-length = 120
+max-line-length = 150
+extend-ignore = E203
 
 [pytest]
 filterwarnings=
