Disable nonce in tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps =
     -rrequirements.txt
 setenv =
     YARRHARR_CONF={env:YARRHARR_CONF:{toxinidir}/yarrharr/tests/dev.ini}
+    YARRHARR_TESTING=yes
     DJANGO_SETTINGS_MODULE=yarrharr.settings
     PYTHONDONTWRITEBYTECODE=yes
 ; This must remain disabled due to https://github.com/twisted/treq/issues/226
