--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     - name: apt install
       run: |
         sudo apt-get update
-        sudo apt-get install --no-install-suggests --no-install-recommends inkscape icoutils scour optipng
+        sudo apt-get install --no-install-suggests --no-install-recommends inkscape icoutils scour optipng node-less node-source-map
 
     - uses: actions/setup-python@v3.1.2
       with:
