Allow disabling compression

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands = {posargs:django-admin --help}
 description = Compress static assets for production deployment
 skip_install = true
 deps = -rrequirements_static.txt
-commands = {envpython} {toxinidir}/bin/compile-static.py
+commands = {envpython} {toxinidir}/bin/compile-static.py {posargs:--compress}
 
 [testenv:lint]
 description = Lint the codebase
