Make it easier to bump individual deps

--- a/tox.ini
+++ b/tox.ini
@@ -50,10 +50,10 @@ description = Pin dependencies
 skip_install = true
 deps = pip-tools
 commands =
-    pip-compile --output-file requirements_lint.txt requirements_lint.in
-    pip-compile --output-file requirements_static.txt requirements_static.in
-    pip-compile --output-file requirements.txt setup.py
-    pip-compile --output-file requirements_test.txt requirements_test.in
+    pip-compile --output-file requirements_lint.txt requirements_lint.in {posargs}
+    pip-compile --output-file requirements_static.txt requirements_static.in {posargs}
+    pip-compile --output-file requirements.txt setup.py {posargs}
+    pip-compile --output-file requirements_test.txt requirements_test.in {posargs}
 
 [flake8]
 exclude =
