--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements_lint.txt requirements_lint.in
 #
-black==22.12.0
+black==23.1.0
     # via -r requirements_lint.in
 click==8.1.3
     # via black
@@ -21,6 +21,8 @@ isort==5.11.4
 mccabe==0.7.0
     # via flake8
 mypy-extensions==0.4.3
+    # via black
+packaging==23.0
     # via black
 pathspec==0.10.1
     # via black
