--- a/requirements.txt
+++ b/requirements.txt
@@ -31,14 +31,8 @@ django==4.1.6
     # via yarrharr (setup.py)
 feedparser==6.0.10
     # via yarrharr (setup.py)
-h2==4.1.0
-    # via twisted
-hpack==4.0.0
-    # via h2
 html5lib==1.1
     # via yarrharr (setup.py)
-hyperframe==6.0.1
-    # via h2
 hyperlink==21.0.0
     # via
     #   treq
@@ -52,8 +46,6 @@ incremental==21.3.0
     # via
     #   treq
     #   twisted
-priority==1.3.0
-    # via twisted
 pyasn1==0.4.8
     # via
     #   pyasn1-modules
@@ -79,7 +71,7 @@ sqlparse==0.4.2
     # via django
 treq==22.2.0
     # via yarrharr (setup.py)
-twisted[http2,tls]==22.10.0
+twisted[tls]==22.10.0
     # via
     #   treq
     #   yarrharr (setup.py)
