--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -12,6 +12,8 @@ cssselect==1.1.0
     # via -r requirements_test.in
 decorator==5.1.1
     # via pytest-twisted
+exceptiongroup==1.1.0
+    # via pytest
 greenlet==1.1.3
     # via pytest-twisted
 iniconfig==1.1.1
@@ -22,18 +24,16 @@ packaging==21.3
     # via pytest
 pluggy==1.0.0
     # via pytest
-py==1.11.0
-    # via pytest
 pyparsing==3.0.9
     # via packaging
-pytest==7.1.3
+pytest==7.2.1
     # via
     #   -r requirements_test.in
     #   pytest-django
     #   pytest-twisted
 pytest-django==4.5.2
     # via -r requirements_test.in
-pytest-twisted==1.13.4
+pytest-twisted==1.14.0
     # via -r requirements_test.in
 tomli==2.0.1
     # via pytest
